--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -47,11 +47,14 @@ dependencies:
   file_picker: ^10.2.1
   path_provider: ^2.1.5
   flutter_pdfview: ^1.4.1+1
-  open_file: ^3.5.10
   bloc: ^9.0.0
   image: ^4.5.4
   permission_handler: ^12.0.1
   path: ^1.9.1
+  dio: ^5.8.0+1
+  device_info_plus: ^11.5.0
+  media_store_plus: ^0.1.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
